i18n part 3
status do stock e notas fiscais